Implement Burger REST API with JPA and pass tests